sandbox/output
OneHundredDoors.java:32: error: ')' expected
                    if ("C".equals(doors.get(door)){ 
                                                   ^
OneHundredDoors.java:34: error: ')' expected
                    } else if ("O".equals(doors.get(door)) {
                                                          ^
2 errors
